--- a/ProjectGreen/app/src/main/res/layout/fragment_enter_screen.xml
+++ b/ProjectGreen/app/src/main/res/layout/fragment_enter_screen.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
+    android:visibility="visible"
     tools:context=".MainActivity">
 
     <ImageView
@@ -58,6 +59,7 @@
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="20sp"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/btnCreateAccount"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
