--- a/ProjectGreen/app/src/main/res/layout/fragment_create_account_screen.xml
+++ b/ProjectGreen/app/src/main/res/layout/fragment_create_account_screen.xml
@@ -68,7 +68,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnCreateNewAccount"
         android:layout_width="320dp"
         android:layout_height="60dp"
@@ -77,6 +77,7 @@
         android:fontFamily="@font/candara"
         android:text="@string/Create_account"
         android:textAllCaps="false"
+        android:textSize="20sp"
         android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/textView5"
         app:layout_constraintEnd_toEndOf="parent"
