--- a/ProjectGreen/app/src/main/res/layout/fragment_enter_screen.xml
+++ b/ProjectGreen/app/src/main/res/layout/fragment_enter_screen.xml
@@ -46,8 +46,7 @@
         app:layout_constraintStart_toStartOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
-    <Button
-
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnSignin"
         android:layout_width="320dp"
         android:layout_height="60dp"
