--- a/ProjectGreen/app/src/main/res/layout/fragment_user_login_screen.xml
+++ b/ProjectGreen/app/src/main/res/layout/fragment_user_login_screen.xml
@@ -66,7 +66,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnCreateNewAccount"
         android:layout_width="320dp"
         android:layout_height="60dp"
@@ -75,6 +75,7 @@
         android:fontFamily="@font/candara"
         android:text="@string/sign_in"
         android:textAllCaps="false"
+        android:textSize="20sp"
         android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/textView5"
         app:layout_constraintEnd_toEndOf="parent"
