--- a/ProjectGreen/app/src/main/res/navigation/my_nav.xml
+++ b/ProjectGreen/app/src/main/res/navigation/my_nav.xml
@@ -19,6 +19,11 @@
             android:id="@+id/action_userLoginScreen_to_createAccountScreen"
             app:destination="@id/createAccountScreen"
             app:enterAnim="@anim/nav_default_enter_anim" />
+        <action
+            android:id="@+id/action_userLoginScreen_to_userViewScreen"
+            app:destination="@id/userViewScreen"
+            app:enterAnim="@android:anim/slide_in_left"
+            app:exitAnim="@android:anim/slide_in_left" />
     </fragment>
     <activity
         android:id="@+id/mainActivity"
@@ -56,4 +61,9 @@
             app:destination="@id/userLoginScreen"
             app:enterAnim="@anim/nav_default_enter_anim" />
     </fragment>
+    <fragment
+        android:id="@+id/userViewScreen"
+        android:name="com.example.projectgreen.UserViewScreen"
+        android:label="fragment_user_view_screen"
+        tools:layout="@layout/fragment_user_view_screen" />
 </navigation>
