--- a/ProjectGreen/app/src/main/res/values-night/themes.xml
+++ b/ProjectGreen/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,16 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.ProjectGreen" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="Base.Theme.ProjectGreen" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <item name="colorPrimary">@color/btn_dark_green</item>
+        <item name="colorPrimaryVariant">@color/light_green</item>
+        <item name="colorOnPrimary">@color/light_green</item>
+        <item name="colorPrimaryDark">@color/btn_dark_green</item>
+
+
     </style>
+
+
+
 </resources>
