--- a/ProjectGreen/app/src/main/res/values/themes.xml
+++ b/ProjectGreen/app/src/main/res/values/themes.xml
@@ -1,8 +1,14 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.ProjectGreen" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="Base.Theme.ProjectGreen" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+
+        <item name="colorPrimary">@color/btn_dark_green</item>
+        <item name="colorPrimaryVariant">@color/light_green</item>
+        <item name="colorOnPrimary">@color/light_green</item>
+        <item name="colorPrimaryDark">@color/btn_dark_green</item>
+
     </style>
 
     <style name="Theme.ProjectGreen" parent="Base.Theme.ProjectGreen" />
