--- a/ProjectGreen/app/src/main/res/values-night/themes.xml
+++ b/ProjectGreen/app/src/main/res/values-night/themes.xml
@@ -12,5 +12,9 @@
     </style>
 
 
+    <style name="DialogAnimation">
+        <item name="android:windowEnterAnimation">@anim/slide_in</item>
+        <item name="android:windowExitAnimation">@anim/slide_out</item>
+    </style>
 
 </resources>
