--- a/ProjectGreen/app/src/main/res/layout/fragment_user_view_screen.xml
+++ b/ProjectGreen/app/src/main/res/layout/fragment_user_view_screen.xml
@@ -1,42 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UserViewScreen">
+    android:fitsSystemWindows="true"
+    tools:context=".MainActivity"
+    tools:openDrawer="start">
 
-
-<com.google.android.material.bottomappbar.BottomAppBar
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/bottomUserAppBar"
-    android:layout_gravity="bottom"
-    android:backgroundTint="@color/bottom_user_menu"
-    app:fabCradleMargin="20dp"
-    app:fabCradleRoundedCornerRadius="20dp"
-    app:fabCradleVerticalOffset="10dp">
-
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottomUserNavView"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginEnd="20dp"
-        app:labelVisibilityMode="labeled"
-        android:background="@drawable/transparent_background"
-        app:menu="@menu/bottom_user_menu" />
+        android:orientation="vertical">
 
-</com.google.android.material.bottomappbar.BottomAppBar>
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:background="@color/btn_dark_green"
+            android:elevation="4dp"
+            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        <FrameLayout
+            android:id="@+id/fragment_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+
+        </FrameLayout>
+
+    </LinearLayout>
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_add"
-        android:backgroundTint="@color/font_dark_green"
-        app:layout_anchor="@id/bottomUserAppBar"
-        app:maxImageSize="25dp"
-        app:tint="@color/white"
-        android:contentDescription="Click to register new recycled materials"/>
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:headerLayout="@layout/nav_user_header"
+        app:itemIconTint="@color/btn_dark_green"
+        app:itemTextColor="@color/btn_dark_green"
+        app:menu="@menu/slide_user_menu" />
+
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+        <com.google.android.material.bottomappbar.BottomAppBar
+            android:id="@+id/bottomUserAppBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:backgroundTint="@color/bottom_user_menu"
+            app:fabCradleMargin="20dp"
+            app:fabCradleRoundedCornerRadius="20dp"
+            app:fabCradleVerticalOffset="10dp">
+
+            <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:id="@+id/bottomUserNavView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="20dp"
+                android:background="@drawable/transparent_background"
+                app:labelVisibilityMode="labeled"
+                app:menu="@menu/bottom_user_menu" />
+
+        </com.google.android.material.bottomappbar.BottomAppBar>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/userFabBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/font_dark_green"
+            android:contentDescription="@string/text_description_1"
+            android:src="@drawable/ic_add"
+            app:layout_anchor="@id/bottomUserAppBar"
+            app:maxImageSize="25dp"
+            app:tint="@color/white" />
+
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+</androidx.drawerlayout.widget.DrawerLayout>
