--- a/ProjectGreen/app/src/main/res/layout/fragment_user_statistics.xml
+++ b/ProjectGreen/app/src/main/res/layout/fragment_user_statistics.xml
@@ -216,7 +216,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:fontFamily="@font/candara"
-                    android:text="In Cash"
+                    android:text="Balance"
                     android:textAlignment="center"
                     android:textSize="20sp" />
 
