--- a/ProjectGreen/app/src/main/res/layout/fragment_admin_main_screen.xml
+++ b/ProjectGreen/app/src/main/res/layout/fragment_admin_main_screen.xml
@@ -3,22 +3,12 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
+    android:id="@+id/drawer_layout_admin"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".UserViewScreen"
+    tools:context=".MainActivity"
     tools:openDrawer="start">
-
-    <com.google.android.material.navigation.NavigationView
-        android:id="@+id/nav_view"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        app:itemIconTint="@color/btn_dark_green"
-        app:itemTextColor="@color/btn_dark_green"
-        app:menu="@menu/slide_user_menu"
-        app:headerLayout="@layout/nav_user_header"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,7 +16,7 @@
         android:orientation="vertical">
 
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
+            android:id="@+id/toolbar_admin"
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:background="@color/btn_dark_green"
@@ -35,7 +25,7 @@
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
         <FrameLayout
-            android:id="@+id/fragment_container"
+            android:id="@+id/fragment_container_admin"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -44,43 +34,38 @@
 
     </LinearLayout>
 
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view_admin"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:headerLayout="@layout/nav_user_header"
+        app:itemIconTint="@color/btn_dark_green"
+        app:itemTextColor="@color/btn_dark_green"
+        app:menu="@menu/slide_user_menu" />
+
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
 
         <com.google.android.material.bottomappbar.BottomAppBar
-            android:id="@+id/bottomUserAppBar"
+            android:id="@+id/bottomUserAppBar_admin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:backgroundTint="@color/bottom_user_menu"
-            app:fabCradleMargin="20dp"
-            app:fabCradleRoundedCornerRadius="20dp"
-            app:fabCradleVerticalOffset="10dp">
+            android:backgroundTint="@color/bottom_user_menu">
 
             <com.google.android.material.bottomnavigation.BottomNavigationView
-                android:id="@+id/bottomUserNavView"
+                android:id="@+id/bottomUserNavView_admin"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginEnd="20dp"
                 android:background="@drawable/transparent_background"
                 app:labelVisibilityMode="labeled"
-                app:menu="@menu/bottom_user_menu" />
+                app:menu="@menu/bottom_admin_menu" />
 
         </com.google.android.material.bottomappbar.BottomAppBar>
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/userFabBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/font_dark_green"
-            android:contentDescription="@string/text_description_1"
-            android:src="@drawable/ic_add"
-            app:layout_anchor="@id/bottomUserAppBar"
-            app:maxImageSize="25dp"
-            app:tint="@color/white" />
-
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
