--- a/ProjectGreen/app/src/main/res/layout/fragment_user_statistics.xml
+++ b/ProjectGreen/app/src/main/res/layout/fragment_user_statistics.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -221,7 +220,7 @@
                     android:textSize="20sp" />
 
                 <TextView
-                    android:id="@+id/textView23"
+                    android:id="@+id/lblbalance"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -233,7 +232,7 @@
             </LinearLayout>
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/btnTakeCash"
                 android:layout_width="match_parent"
                 android:layout_height="75dp"
                 android:fontFamily="@font/candara"
