--- a/ProjectGreen/app/src/main/res/layout/bottom_user_material_selector_layout.xml
+++ b/ProjectGreen/app/src/main/res/layout/bottom_user_material_selector_layout.xml
@@ -65,7 +65,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/enter_pieces"
+            android:text="@string/quantity"
             android:layout_marginLeft="30dp"
             android:textSize="16sp"/>
 
