--- a/ProjectGreen/app/src/main/res/navigation/my_nav.xml
+++ b/ProjectGreen/app/src/main/res/navigation/my_nav.xml
@@ -114,4 +114,14 @@
         android:name="com.example.projectgreen.AdminViewLeaderboard"
         android:label="fragment_admin_view_leaderboard"
         tools:layout="@layout/fragment_admin_view_leaderboard" />
+    <fragment
+        android:id="@+id/aboutPopup"
+        android:name="com.example.projectgreen.AboutPopup"
+        android:label="fragment_about_popup"
+        tools:layout="@layout/fragment_about_popup" />
+    <fragment
+        android:id="@+id/adminTuneRewards"
+        android:name="com.example.projectgreen.AdminTuneRewards"
+        android:label="fragment_admin_tune_rewards"
+        tools:layout="@layout/fragment_admin_tune_rewards" />
 </navigation>
