--- a/ProjectGreen/app/src/main/res/values-night/themes.xml
+++ b/ProjectGreen/app/src/main/res/values-night/themes.xml
@@ -4,8 +4,8 @@
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
         <item name="colorPrimary">@color/btn_dark_green</item>
-        <item name="colorPrimaryVariant">@color/light_green</item>
-        <item name="colorOnPrimary">@color/light_green</item>
+<!--        <item name="colorPrimaryVariant">@color/light_green</item>-->
+<!--        <item name="colorOnPrimary">@color/light_green</item>-->
         <item name="colorPrimaryDark">@color/btn_dark_green</item>
 
 
