--- a/ProjectGreen/app/src/main/res/layout/fragment_admin_tune_rewards.xml
+++ b/ProjectGreen/app/src/main/res/layout/fragment_admin_tune_rewards.xml
@@ -164,6 +164,7 @@
                     android:id="@+id/btnSaveAndSetTuneFields"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
                     android:text="@string/save_amp_set" />
 
                 <Button
