--- a/ProjectGreen/app/src/main/res/layout/fragment_user_login_screen.xml
+++ b/ProjectGreen/app/src/main/res/layout/fragment_user_login_screen.xml
@@ -112,7 +112,7 @@
         android:drawableLeft="@drawable/email"
         android:ems="10"
         android:fontFamily="@font/candara"
-        android:hint="@string/enter_full_name"
+        android:hint="@string/enter_email"
         android:inputType="text"
         android:padding="10dp"
         android:textColor="@color/font_dark_green"
