--- a/ProjectGreen/app/src/main/res/layout/fragment_user_register.xml
+++ b/ProjectGreen/app/src/main/res/layout/fragment_user_register.xml
@@ -10,15 +10,14 @@
     <ListView
         android:id="@+id/listUsersAllMatView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_height="670dp"
         android:divider="@android:color/transparent"
         android:dividerHeight="10.0sp"
         android:scrollbars="vertical"
-        tools:listitem="@layout/list_user_item" />
+        tools:listitem="@layout/list_user_item"></ListView>
 
-                <Space
-                    android:layout_width="match_parent"
-                    android:layout_height="100dp" />
-
+    <View
+        android:id="@+id/divider2"
+        android:layout_width="match_parent"
+        android:layout_height="50dp" />
 </LinearLayout>
