--- a/ProjectGreen/app/src/main/res/layout/bottom_user_material_selector_layout.xml
+++ b/ProjectGreen/app/src/main/res/layout/bottom_user_material_selector_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -96,7 +97,8 @@
             android:layout_width="wrap_content"
             android:layout_height="68dp"
             android:layout_weight="1"
-            android:text="REQUSET FOR APPROVAL" />
+            android:text="REQUSET FOR APPROVAL"
+            app:cornerRadius="20dp" />
 
     </LinearLayout>
 
