--- a/ProjectGreen/app/src/main/res/layout/fragment_admin_tune_rewards.xml
+++ b/ProjectGreen/app/src/main/res/layout/fragment_admin_tune_rewards.xml
@@ -116,6 +116,11 @@
 
             </LinearLayout>
 
+            <View
+                android:id="@+id/divider5"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -175,13 +180,6 @@
                     android:text="@string/restore_to_defaults" />
 
             </LinearLayout>
-
-            <View
-                android:id="@+id/divider5"
-                android:layout_width="wrap_content"
-                android:layout_height="100dp"
-                android:background="?android:attr/listDivider" />
-
 
         </LinearLayout>
 
