--- a/ProjectGreen/app/src/main/res/layout/fragment_admin_view_material_approve.xml
+++ b/ProjectGreen/app/src/main/res/layout/fragment_admin_view_material_approve.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AdminViewMaterialApprove">
 
    <ListView
+       android:id="@+id/listUsersView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
-       android:id="@+id/listUsersView"
-       android:scrollbars="vertical"
-       android:layout_marginTop="12dp"
-       tools:listitem="@layout/list_user_item"
        android:divider="@android:color/transparent"
-       android:layout_marginStart="10dp"
-       android:layout_marginEnd="10dp"
-       android:dividerHeight="10.0sp"/>
+       android:dividerHeight="10.0sp"
+       android:scrollbars="vertical"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintStart_toStartOf="parent"
+       tools:layout_editor_absoluteY="12dp"
+       tools:listitem="@layout/list_user_item" />
 
 
 
