--- a/ProjectGreen/app/src/main/res/layout/nav_user_header.xml
+++ b/ProjectGreen/app/src/main/res/layout/nav_user_header.xml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="176dp"
-    android:gravity="bottom"
-    android:padding="20dp"
+    android:layout_height="215dp"
     android:background="@drawable/dialog_backimg"
+    android:gravity="bottom"
+    android:orientation="vertical"
+    android:padding="20dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
+        android:fitsSystemWindows="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@mipmap/ic_profile_round"/>
+        android:src="@mipmap/ic_profile_round" />
 
     <TextView
         android:id="@+id/lblSlideMenuName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/candara"
+
         android:text="Hi, user.getName()"
         android:textColor="@color/font_dark_green"
         android:textSize="18sp"
@@ -28,9 +29,9 @@
         android:id="@+id/lblSlideMenu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
         android:fontFamily="@font/candara"
-        android:text="administrator"
+
+        android:text="Administrator"
         android:textColor="@color/font_dark_green"
         android:textSize="14sp" />
 
