--- a/ProjectGreen/app/src/main/res/layout/bottom_user_material_selector_layout.xml
+++ b/ProjectGreen/app/src/main/res/layout/bottom_user_material_selector_layout.xml
@@ -75,8 +75,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="6"
-            android:textAlignment="center"
-            android:inputType="numberSigned" />
+            android:inputType="numberSigned"
+            android:textAlignment="center" />
 
     </LinearLayout>
 
