--- a/ProjectGreen/app/src/main/res/layout/fragment_admin_tune_rewards.xml
+++ b/ProjectGreen/app/src/main/res/layout/fragment_admin_tune_rewards.xml
@@ -181,6 +181,12 @@
 
             </LinearLayout>
 
+            <View
+                android:id="@+id/divider7"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:background="?android:attr/listDivider" />
+
         </LinearLayout>
 
     </ScrollView>
